Fix custom visibility options

--- a/src/web/app/components/visibility-panel/visibility-panel.component.scss
+++ b/src/web/app/components/visibility-panel/visibility-panel.component.scss
@@ -39,3 +39,10 @@
 .dropdown-item {
   cursor: pointer;
 }
+
+.dropdown-button {
+  border: none;
+  background: none;
+  width: 100%;
+  text-align: left;
+}
